src/runtime/tests/fixtures/big_backtrace/big_backtrace.error.expected
RUNTIME ERROR
Traceback: most recent call lowest
  21: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 9:22
    recursive_function(0);
  20: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  19: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  18: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  17: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  16: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  15: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  14: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  13: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  12: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  11: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  10: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  9: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  8: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  7: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  6: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  5: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  4: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  3: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  2: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  1: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 5:30
    recursive_function(i + 1);
  0: File "./src/runtime/tests/test_programs/big_backtrace.nl", line: 3:48
    print("oh no look out for that number!" + 1);
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: Attempted to add String with Int
